<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.CreateWalletActivity"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:clipChildren="true"
    android:background="@color/title_bar_color"

    >

    <com.raistone.wallet.sealwallet.widget.TitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_52"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wallet_name"
            android:textColor="@color/three_color"
            android:layout_marginLeft="@dimen/space_15"
            android:layout_marginTop="@dimen/dp_15"
            android:textSize="@dimen/space_12"
            />

        <EditText
            android:id="@+id/wallet_name_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_enter_the_name_of_the_wallet"
            android:background="@null"
            android:layout_marginLeft="@dimen/space_15"
            android:layout_marginTop="@dimen/space_5"
            android:textSize="@dimen/space_12"
            android:inputType="text"
            android:textCursorDrawable="@drawable/editcursor"
            android:maxLength="20"
            android:maxLines="1"
            />

        <View style="@style/h_line"
            android:layout_marginLeft="@dimen/space_15"
            android:layout_marginRight="@dimen/space_15"
            android:layout_marginTop="@dimen/space_10"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_pwd_string"
            android:textColor="@color/three_color"
            android:layout_marginLeft="@dimen/space_15"
            android:layout_marginTop="@dimen/dp_15"
            android:textSize="@dimen/space_12"
            />

        <EditText
            android:id="@+id/pwd_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_enter_your_password"
            android:background="@null"
            android:layout_marginLeft="@dimen/space_15"
            android:layout_marginTop="@dimen/space_5"
            android:textSize="@dimen/space_12"
            android:inputType="textPassword"
            android:digits="@string/input_digits"
            android:textCursorDrawable="@drawable/editcursor"
            android:maxLength="20"
            android:maxLines="1"
            />

        <View style="@style/h_line"
            android:layout_marginLeft="@dimen/space_15"
            android:layout_marginRight="@dimen/space_15"
            android:layout_marginTop="@dimen/space_10"
            />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textColor="@color/three_color"
            android:layout_marginLeft="@dimen/space_15"
            android:layout_marginTop="@dimen/dp_15"
            android:textSize="@dimen/space_12"
            />

        <EditText
            android:id="@+id/pwd_confirm_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pleaseconfirm_password"
            android:background="@null"
            android:layout_marginLeft="@dimen/space_15"
            android:layout_marginTop="@dimen/space_5"
            android:textSize="@dimen/space_12"
            android:inputType="textPassword"
            android:digits="@string/input_digits"
            android:textCursorDrawable="@drawable/editcursor"
            android:maxLength="20"
            android:maxLines="1"
            />

        <View style="@style/h_line"
            android:layout_marginLeft="@dimen/space_15"
            android:layout_marginRight="@dimen/space_15"
            android:layout_marginTop="@dimen/space_10"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pwd_tips_info"
            android:textColor="@color/three_color"
            android:layout_marginLeft="@dimen/space_15"
            android:layout_marginTop="@dimen/dp_15"
            android:textSize="@dimen/space_12"
            />

        <EditText
            android:id="@+id/pwd_tips_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_pwd_tips_info"
            android:background="@null"
            android:layout_marginLeft="@dimen/space_15"
            android:layout_marginTop="@dimen/space_5"
            android:textSize="@dimen/space_12"
            android:inputType="text"
            android:textCursorDrawable="@drawable/editcursor"
            android:maxLength="100"
            android:maxLines="1"
            />

        <View style="@style/h_line"
            android:layout_marginLeft="@dimen/space_15"
            android:layout_marginRight="@dimen/space_15"
            android:layout_marginTop="@dimen/space_10"
            />

    </LinearLayout>

    <Button
        android:id="@+id/create_wallet_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_43"
        android:text="@string/create_wallet"
        android:layout_marginTop="@dimen/space_40"
        android:layout_marginLeft="@dimen/space_40"
        android:layout_marginRight="@dimen/space_40"
        android:textColor="@color/white"
        android:background="@drawable/btn_gray_bg"
        android:textSize="@dimen/space_13"
        />

    <TextView
        android:id="@+id/import_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/import_wallet_string"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/space_17"
        android:textColor="@color/main_color"
        android:textSize="@dimen/space_12"
        />


</LinearLayout>